--- a/Events.html
+++ b/Events.html
@@ -571,7 +571,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div   class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <a href="fashionshow.html"><img src="img/performer/Fashion.png" alt=""></a>
+                                    <a href="fashionshow.html"><img src="img/performer/fashion.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Fasion Show</h4>
