--- a/Events.html
+++ b/Events.html
@@ -464,7 +464,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="facepainting.html"><img src="img/performer/face.png" alt=""></a>
+                                    <a href="facepainting.html"><img src="img/performer/Face.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Face Painting</h4>
