--- a/Mask_of_logic.html
+++ b/Mask_of_logic.html
@@ -107,33 +107,33 @@
                         </p>
                         <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                             <h3>Rounds</h3>
-                            <h4>Round 1: Tech Trivia</h4>
+                            <h4 style="color:#fff ;">Round 1: Tech Trivia</h4>
                             <ul class= "unordered-list" style="color: #AAB1B7;" >
                             <li>This round will be a timed multiple-choice quiz. </li>
                             <li>Questions will focus on basic programming knowledge, recent advancements in AI, Machine Learning, and related emerging technologies.
                             </li>
                         </ul>
-                        <h4>Round 2: Bug Zapper
+                        <h4 style="color:#fff ;">Round 2: Bug Zapper
                         </h4>
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
                             <li>Identify and fix bugs containing intentional errors in provided code (C, Python, Java).
                             </li>
                             <li>Earn points for each bug zapped within the time limit. </li>
                         </ul>
-                        <h3>Round 3: Code Craft</h3>
+                        <h4 style="color:#fff ;">Round 3: Code Craft</h4>
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
                             <li>Tackle any 3 of 5 coding problems in your preferred language.  </li>
                             <li>Points will be awarded based on the correctness and efficiency of the solutions. </li>
                         </ul>
-                        <h3>Round 4: Code Scramble
-                        </h3>
+                        <h4 style="color:#fff ;">Round 4: Code Scramble
+                        </h4>
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
                             <li> Participants will be presented with jumbled code snippets. </li>
                             <li>They need to rearrange the snippets in the correct order to achieve a desired functionality.
                             </li>
                         </ul>
-                        <h3>Round 5: Decode Pursuit (Uncharted Alley)
-                        </h3>
+                        <h4 style="color:#fff ;">Round 5: Decode Pursuit (Uncharted Alley)
+                        </h4>
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
                             <li>Squares of code, a hidden quest,
                                 Unlock the path, and put your mind to the test.
@@ -202,35 +202,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="brand_wrap">
-                        <div class="brand_active owl-carousel">
-                            <div class="single_brand text-center">
-                                <img src="img/brand/1.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/2.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/3.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/4.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/5.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/1.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/2.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           
         </div>
     </div>
     <!-- brand_area_end  -->
