--- a/addmad.html
+++ b/addmad.html
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section_title ">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">On Spot Registration Only</h3>
                         <div class="row justify-content-center responsive-iframe-container">
                            </div>
                 </div>
