--- a/Events.html
+++ b/Events.html
@@ -287,7 +287,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>CAD Clash</h4>
-                                    <span>CSE Department</span>
+                                    <span>CIVIL Department</span>
                                 </div>
                             </div>
                         </div>
