--- a/classroomcricket.html
+++ b/classroomcricket.html
@@ -113,9 +113,9 @@
                         <li>1 over power play.</li>
                         <li>The umpire's decision is final</li>
                     </ul>
-                    <h4>Instructions:</h4>
+                    <h4 style="color:#fff ;">Instructions:</h4>
                     <p>The umpire’s decision is final</p>
-                    <h4>entry fee</h4>
+                    <h4 style="color:#fff ;">entry fee</h4>
                     <p>₹200</p>
                 </div>
 
