--- a/tictactoe.html
+++ b/tictactoe.html
@@ -85,7 +85,7 @@
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Valorant</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Tic Tac Toe</h3>
                                 <a href="#register" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Register Now</a>
                           </div>
                        </div>
@@ -108,11 +108,11 @@
 
                         <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                             <h3>Rounds</h3>
-                            <h4>Round 1: </h4>
+                            <h4 style="color:#fff ;">Round 1: </h4>
                             <ul class= "unordered-list" style="color: #AAB1B7;" >
                             <li>The teams are made X and O ,the flags are hidden in the campus  the participants have to hunt for there particular flags with the help of the given riddles  </li>
                         </ul>
-                        <h4>Round 2: </h4>
+                        <h4 style="color:#fff ;">Round 2: </h4>
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
                             <li>After finding out the riddles the participants who find out all the flages will make their noughtes and crosses will be considerd as the winners.</li>
                             
