--- a/contact.html
+++ b/contact.html
@@ -119,8 +119,8 @@
                                 <p>Sourabh P: 8746953768</p>
                                 <p>Varshini J: 9686731950</p>
                                 <h4 style="color:#1f0902 ;">E&E:</h4>
-                                <p>Rohit: 9880857398</p>
-                                <p>Tulsi: 6364030716</p>
+                                <p>Sandesh M: 9606708594</p>
+                                <p>Deepti C: 7483280717</p>
                                 <h4 style="color:#1f0902 ;">Mechanical:</h4>
                                 <p>Manjunath G: 63606354198</p>
                                 <p>Sanddep D: 9731273961</p>
