--- a/valorant.html
+++ b/valorant.html
@@ -114,7 +114,7 @@
                         <li>Players should carry their own setup for the tournament </li>
                         <li>Internet will be provided at the battle field  (players should come with backup with the internet)</li>
                         <li>No substitutes are allowed </li>
-                        <li>College  identity cards are compulsory (all should be from one college) </li>
+                        <li>College  identity cards are compulsory </li>
                         <li>Once the tournament starts, team cannot replace any player</li>
                         <li>Maps will  be decided through the toss at the battle field</li>
                         <li>Team leader should provide their whatsapp number while registration</li>
