--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
                                 <p>Nagesh T: 6360047487</p>
                                 <p>Khushi: 8904793264</p>
                                 <h4 style="color:#1f0902 ;">CIVIL:</h4>
-                                <p>Rohit: 9880857398</p>
+                                <p>Rohit H: 9880853798</p>
                                 <p>Tulsi: 6364030716</p>
                                 <h4 style="color:#1f0902 ;">ECE:</h4>
                                 <p>Sourabh P: 8746953768</p>
