--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section_title text-center mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
-                        <a href="Events.html"><h3>Events Details</h3></a>
+                        <a href="Events.html">
+                            <h3>Events Schedule</h3>
+                        </a>
                         <h4>Day 1</h4>
                     </div>
                 </div>
@@ -123,7 +125,19 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="program_detail_wrap">
-                    
+                        <div class="single_propram">
+                            <div class="inner_wrap">
+                                <div class="circle_img"></div>
+                                <div class="porgram_top">
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Valorant</span>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
+                                </div>
+                                <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                    <a href="Events.html"><img src="img/performer/valo.png" alt=""></a>
+                                </div>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">AI & DS</h4>
+                            </div>
+                        </div>
                         <div class="single_propram">
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
@@ -183,7 +197,7 @@
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Valorant</span>
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Scavenger Hunt</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
@@ -196,19 +210,6 @@
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Scavenger Hunt</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
-                                    </div>
-                                    <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                        <a href="Events.html"><img src="img/performer/valo.png" alt=""></a>
-                                    </div>
-                                    <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">AI & DS</h4>
-                                    </div>
-                                    </div>
-                                    <div class="single_propram">
-                                        <div class="inner_wrap">
-                                            <div class="circle_img"></div>
-                                            <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Gaana Sudhe</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
