--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="parallax home__parallax home__parallax-img3" data-rellax-speed="-5"></div>
             <div class="parallax home__parallax home__parallax-img4" data-rellax-speed="-2"></div>
             <h1 class="parallax home__title" data-rellax-speed="-6">Vencer 2K24</h1>
-            <span class="parallax home__subtitle" data-rellax-speed="-5">AITM, BELGAUM</span> 
+            
 
             <div class="home__scroll">
                <a href="#section"><i class='bx bx-mouse'></i></a>
@@ -162,7 +162,7 @@
                                 <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">CSE</h4>
                             </div>
                         </div>
-                        <div class="single_propram">
+                        <div class="single_propram">z
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
