--- a/index.html
+++ b/index.html
@@ -400,6 +400,20 @@
                                 <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Robotics</h4>
                             </div>
                         </div>
+                        <div class="single_propram">
+                            <div class="inner_wrap">
+                                <div class="circle_img"></div>
+                                <div class="porgram_top">
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Brain Twister</span>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00AM</h4>
+                                </div>
+                                <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                    <a href="Events.html"><img src="img/performer/brain.png" alt=""></a>
+                                </div>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">EC</h4>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
