--- a/chayachitra.html
+++ b/chayachitra.html
@@ -154,8 +154,8 @@
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
                             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScPU1h2Fbbf3GCEm63_o4GTJMXDmHyQZb-SutgjKmEHELFL1w/viewform?embedded=true" width="640" height="3689" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                        </div>
- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScaRhmtQUS_swE4BG4_7Wj2hKt_FrweczRcNoMrCWi3BRAXaQ/viewform?embedded=true" width="640" height="3109" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>               </div>
+                        
+ <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScaRhmtQUS_swE4BG4_7Wj2hKt_FrweczRcNoMrCWi3BRAXaQ/viewform?embedded=true" width="640" height="3109" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>               </div> </div>
             </div>
           
         </div>
