--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/amaan.png" alt="">
+                                    <a href="https://github.com/SayeedAmaan06"><img src="img/performer/amaan.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Sayeed Amaan s</h4>
